# vanity

./: .gitignore  CMakeLists.txt  README.md
include/vanity/: image_buffer.hpp  image_io.hpp  image_ops.hpp
src/cli/: command_registry.cpp  command_registry.hpp  commands.cpp  main.cpp
src/cli/commands/: add_border_command.cpp
src/lib/: image_buffer.cpp  image_io.cpp  image_ops.cpp
tests/: test_image_buffer.cpp  test_image_io.cpp  test_image_ops.cpp
